--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -9441,12 +9441,14 @@ Responsive Design
 /* Start card layout */
 .frm-card-item {
 	display: flex;
-	gap: 10px;
 	border: 1px solid var(--grey-200);
 	border-radius: var(--small-radius);
 	padding: var(--gap-sm);
 	box-shadow: var(--box-shadow-xs);
 	background: #FFFFFF;
+}
+.frm-card-item:not(.frm-counter-card) {
+	gap: 10px;
 }
 /* End card layout */
 
